# mattrs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
bitcoin-script/: Cargo.toml  README.md
bitcoin-script/src/: lib.rs  parse.rs
bitcoin-script/tests/: test.rs
docs/: README.md
examples/: Cargo.toml  README.md  clause_usage.rs  getting_started.rs
examples/aggregate_exits/: SPEC.md  aggregate_exits.md  main.rs
examples/aggregate_exits/contracts/: bond.rs  delegation.rs  dispute.rs  fixture.rs  mod.rs  pending_exit.rs  stack.rs  unwind.rs
examples/game256/: Cargo.toml  README.md
examples/game256/src/: lib.rs
examples/game256/tests/: test_fraud.rs
examples/matt_vm/: main.rs
examples/matt_vm/contracts/: computer.rs  mod.rs  roles.rs  stages.rs  vm.rs
examples/minivault/: Cargo.toml  README.md
examples/minivault/src/: lib.rs
examples/minivault/tests/: test_minivault.rs
examples/ram/: Cargo.toml  README.md
examples/ram/tests/: test_ram.rs
examples/rps/: Cargo.toml  README.md  contracts.rs  main.rs
examples/rps/tests/: test_rps.rs
examples/src/: lib.rs  ram.rs  rps.rs
examples/test-utils/: Cargo.toml
examples/test-utils/src/: lib.rs
examples/tests/: test_fraud.rs  test_minivault.rs  test_ram.rs  test_rps.rs  test_vault.rs
examples/tests/common/: mod.rs
examples/tictactoe/: contracts.rs  main.rs
examples/vault/: Cargo.toml  README.md  contracts.rs  main.rs
examples/vault/scripts/: normal.txt  recover.txt  revault.txt
examples/vault/src/: lib.rs
examples/vault/tests/: test_vault.rs
inspector/: Cargo.toml
inspector/src/: main.rs
inspector/web/: app.js  index.html  style.css
mattrs/: Cargo.toml
mattrs-derive/: Cargo.toml
mattrs-derive/src/: contract.rs  lib.rs
mattrs/src/: contract_instance.rs  lib.rs  macros.rs  signer.rs
mattrs/src/hub/: rps.rs  vault.rs
mattrs/tests/: common.rs  test_vault.rs
rps/: Cargo.toml
rps/src/: main.rs
src/: argtypes.rs  ccv.rs  contracts.rs  ctv.rs  fraud.rs  inspector.rs  key_payout.rs  lib.rs  macros.rs  manager.rs  merkle.rs  report.rs  script_helpers.rs  script_utils.rs  signer.rs  stack.rs  taproot.rs  testutil.rs  tx.rs  vault.rs
src/fraud/: mod.rs  roles.rs
src/hub/: fraud.rs  game256.rs  minivault.rs  mod.rs  ram.rs  rps.rs  vault.rs
src/protocol/: chain.rs  mod.rs  runner.rs
tests/: test_aggregate_exits.rs  test_contracts.rs  test_fraud.rs  test_game256.rs  test_game256_e2e.rs  test_game256_protocol.rs  test_matt_vm.rs  test_minivault.rs  test_observe.rs  test_protocol.rs  test_ram.rs  test_rps.rs  test_tictactoe.rs  test_vault.rs  test_vault_protocol.rs
tests/common/: mod.rs
tests/support/: game256.rs  game256_roles.rs  merkle.rs  minivault.rs  mod.rs  ram.rs  rps.rs  script_helpers.rs  testkit.rs  vault.rs  vault_roles.rs
