[workspace]
members = [
    ".",
    "examples/test-utils",
    "examples/vault",
    "examples/minivault",
    "examples/rps",
    "examples/ram",
    "examples/game256",
]

[package]
name = "mattrs"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { version = "0.32", features = ["rand-std"] }
bitcoincore-rpc = "0.19"
bitcoin-script = { path = "mattrs_old/bitcoin-script" }
hex = "0.4"
thiserror = "1.0"
