[workspace]
members = [
    ".",
    "examples/test-utils",
    "examples/vault",
    "examples/minivault",
    "examples/rps",
    "examples/ram",
    "examples/game256",
    "inspector",
]

[package]
name = "mattrs"
version = "0.1.0"
edition = "2021"

[features]
default = []
inspector = ["serde", "serde_json"]

[dependencies]
bitcoin = { version = "0.32", features = ["rand-std"] }
bitcoincore-rpc = "0.19"
bitcoin-script = { path = "mattrs_old/bitcoin-script" }
hex = "0.4"
thiserror = "1.0"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
