[package]
name = "mattrs-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
mattrs = { path = ".." }
bitcoin = { version = "0.32", features = ["rand-std"] }
bitcoincore-rpc = "0.19"
hex = "0.4"
bitcoin-script = { path = "../mattrs_old/bitcoin-script" }
rustyline = "15"
serde_json = "1"

[[bin]]
name = "vault-cli"
path = "src/bin/vault_cli.rs"
