[package]
name = "mattrs-inspector"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "inspector"
path = "src/main.rs"

[dependencies]
mattrs = { path = "..", features = ["inspector"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
