[package]
name = "mattrs"
version = "0.1.0"
edition = "2021"
authors = ["Salvatore Ingala <salvatoshi@protonmail.com>"]
description = "Don't sleep on Bitcoin smart contracts"
documentation = "https://merkle.fun"
repository = "https://github.com/Merkleize/mattrs"


[dependencies]
bitcoin = "0.32.2"
bitcoincore-rpc = "0.19.0"
bitcoin-script = { path = "../bitcoin-script"}
hex = "0.4.3"
tokio = { version = "1.40.0", features = ["full", "rt", "tokio-macros"] }
thiserror = "1.0.64"

[dev-dependencies]
hex-literal = "0.4.1"
