[package]
name = "mattrs-game256"
version = "0.1.0"
edition = "2021"

[dependencies]
mattrs = { path = "../.." }
bitcoin = { version = "0.32", features = ["rand-std"] }
bitcoin-script = { path = "../../mattrs_old/bitcoin-script" }

[dev-dependencies]
mattrs-test-utils = { path = "../test-utils" }
bitcoincore-rpc = "0.19"
hex = "0.4"
