[package]
name = "mattrs-vault"
version = "0.1.0"
edition = "2021"

[features]
default = ["inspector"]
inspector = ["mattrs/inspector"]

[dependencies]
mattrs = { path = "../.." }
bitcoin = { version = "0.32", features = ["rand-std"] }
bitcoincore-rpc = "0.19"
bitcoin-script = { path = "../../mattrs_old/bitcoin-script" }
hex = "0.4"
rustyline = "15"
serde_json = "1"

[dev-dependencies]
mattrs-test-utils = { path = "../test-utils" }

[[bin]]
name = "vault-cli"
path = "src/bin/vault_cli.rs"
